--- a/wp-content/uploads/simply-static/temp-files/simply-static-1-1702833954/index.html
+++ b/wp-content/uploads/simply-static/temp-files/simply-static-1-1702833954/index.html
@@ -111,7 +111,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 						<div class="wp-block-navigation__responsive-container-content" id="modal-1-content">
 							<ul class="wp-block-navigation__container has-text-color has-foreground-color has-background has-background-background-color is-responsive items-justified-center wp-block-navigation">
 <li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#home"><span class="wp-block-navigation-item__label">Home</span></a></li>
-<li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#myprojects"><span class="wp-block-navigation-item__label">Projects</span></a></li>
+<li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#projects"><span class="wp-block-navigation-item__label">Projects</span></a></li>
 <li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#"><span class="wp-block-navigation-item__label">Services</span></a></li>
 <li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#"><span class="wp-block-navigation-item__label">About</span></a></li>
 <li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="#"><span class="wp-block-navigation-item__label">Contact us</span></a></li>
@@ -368,7 +368,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 
 <footer class="wp-block-template-part">
 <div class="wp-block-group alignwide is-horizontal is-content-justification-space-between is-nowrap is-layout-flex wp-container-core-group-layout-5 wp-block-group-is-layout-flex" style="margin-top:10px;margin-bottom:10px">
-<p class="has-text-align-center" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;font-size:14px">© 2023 Arunkanai <a href="https://www.cretathemes.com/gutenberg/free-freelancer-wordpress-theme/">Portfolio</a>. All Rights Reserved.</p>
+<p class="has-text-align-center" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0;font-size:14px">© 2023 All Rights Reserved.</p>
 
 
 <nav class="is-responsive items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-layout-2 wp-block-navigation-is-layout-flex" aria-label="Footer navigation" data-wp-interactive data-wp-context='{"core":{"navigation":{"overlayOpenedBy":[],"type":"overlay","roleAttribute":"","ariaLabel":"Menu"}}}'><button aria-haspopup="true" aria-label="Open menu" class="wp-block-navigation__responsive-container-open " data-wp-on--click="actions.core.navigation.openMenuOnClick" data-wp-on--keydown="actions.core.navigation.handleMenuKeydown"><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" aria-hidden="true" focusable="false"><rect x="4" y="7.5" width="16" height="1.5"></rect><rect x="4" y="15" width="16" height="1.5"></rect></svg></button>
